# project_euler

./: Cargo.toml  Readme.md
src/: problem_1.rs  problem_2.rs  problem_3.rs  problem_4.rs  problem_6.rs  problem_7.rs  problem_8.rs
