[package]
name = "project_euler"
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]
name = "problem_1"
path = "src/problem_1.rs"

[[bin]]
name = "problem_2"
path = "src/problem_2.rs"

[[bin]]
name = "problem_3"
path = "src/problem_3.rs"

[[bin]]
name = "problem_4"
path = "src/problem_4.rs"

[[bin]]
name = "problem_6"
path = "src/problem_6.rs"

[[bin]]
name = "problem_7"
path = "src/problem_7.rs"

[[bin]]
name = "problem_8"
path = "src/problem_8.rs"